数据结构笔记提交

--- a/数据结构与算法/数据结构与算法.md
+++ b/数据结构与算法/数据结构与算法.md
@@ -6,11 +6,15 @@
 
 **算法描述：**
 
-1. 选定一个合适的值(理想情况中值最好，但实现中一般使用数组第一个值) ,称为 "枢轴"(pivot)。
-2. 基于这个值，将数组分为两部分，较小的分在左边，较大的分在右边。
-3. 可以肯定，如此一轮下来，这个枢轴的位置-定在最终位置上。
-4. 对两个子数组分别重复上述过程，直到每个数组只有一个元素。
-5. 排序完成。
+> 1.选定一个合适的值(理想情况中值最好，但实现中一般使用数组第一个值) ,称为 "枢轴"(pivot)。
+>
+> 2.基于这个值，将数组分为两部分，较小的分在左边，较大的分在右边。
+>
+> 3.可以肯定，如此一轮下来，这个枢轴的位置-定在最终位置上。
+>
+> 4.对两个子数组分别重复上述过程，直到每个数组只有一个元素。
+>
+> 5.排序完成。
 
 **复杂度：**O（n）
 
@@ -78,10 +82,13 @@ public class ArrayDemo1{
 
 **算法描述：**
 
-1. 比较相邻的元素。如果第-一个比第二个大，就交换它们两个;
-2. 对每一对相邻元素作同样的工作，从开始第一对到结尾的最后一对，这样在最后的元素应该会是最大的数;
-3. 针对所有的元素重复以上的步骤，除了最后一个;
-4. 重复步骤1~3，直到排序完成。
+> 比较相邻的元素。如果第-一个比第二个大，就交换它们两个;
+>
+> 对每一对相邻元素作同样的工作，从开始第一对到结尾的最后一对，这样在最后的元素应该会是最大的数;
+>
+> 针对所有的元素重复以上的步骤，除了最后一个;
+>
+> 重复步骤1~3，直到排序完成。
 
 **复杂度:** O(n^2), 
 
@@ -127,12 +134,13 @@ public class ArrayDemo2{
 
 **算法描述：**
 
-1. 从第一个元素开始，该元素可以认为已经被排序
-2. 取出下一个元素，在已经排序的元素序列中从后向前扫描
-3. 如果该元素（已排序）大于新元素，将该元素移到下一位置
-4. 重复步骤 3，直到找到已排序的元素小于或者等于新元素的位置
-5. 将新元素插入到该位置后
-6. 重复步骤 2~5
+> 1.从第一个元素开始，该元素可以认为已经被排序;
+>
+> 2.取出下一个元素，在已经排序的元素序列中从后向前扫描;如果该元素（已排序）大于新元素，将该元素移到下一位置;
+>
+> 3.重复步骤 3，直到找到已排序的元素小于或者等于新元素的位置;
+>
+> 4.将新元素插入到该位置后;重复步骤 2~5.
 
 **复杂度:** O(n^2),
 
@@ -267,4 +275,37 @@ public class ArrayDemo5{
 
 
 ## 6.二叉树
+
+**特性:**
+
+> 1.左子树上所有结点的值均小于或>等于它的根结点的值。
+> 2.右子树上所有结点的值均大于或等于它的根结点的值。
+> 3.左、右子树也分别为二叉排序树。
+
+**如图：**
+
+![image-20201125234552154](C:\Users\duanjianhui\AppData\Roaming\Typora\typora-user-images\image-20201125234552154.png)
+
+**查找:**二分查找(通过一层一层的比较大小来查找位置) :如查找值为10的节点: 9--1--10
+**缺陷:**插入容易变成线性形态，查找性能大打折扣，这时需要引入红黑树来解决
+
+![image-20201125234914419](C:\Users\duanjianhui\AppData\Roaming\Typora\typora-user-images\image-20201125234914419.png)
+
+## 7.红黑树
+
+特点:是一种自平衡的二叉查找树，除了符合二叉树的特点之外，还符合以下几点:
+
+> 1.节点是红色或黑色。
+> 2.根节点是黑色。
+> 3.每个叶子节点都是黑色的空节点(NIL节点) 。
+> 4.每个红色节点的两个子节点都是黑色。(从每个叶子到>根的所有路径上不能有两个连续的红色节点)
+> 5.从任一节点到其每个叶子的所有路径都包含相同数目的黑色节点。
+
+**特点：**添加删除:通过自旋来保证平衡
+
+## 8.B -Tree
+
+
+
+## 9.B+Tree
 
